<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/heimertitle">


    <com.mygdx.game.MagicTextView xmlns:qwerjk="http://schemas.android.com/apk/res/com.mygdx.game"
        android:id="@+id/titletext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="32sp"
        android:textColor="@color/title_color"
        android:textAlignment="center"
        qwerjk:innerShadowRadius="1dp"
        qwerjk:outerShadowDy="3dp"
        qwerjk:outerShadowColor="#FF0088ff"
        qwerjk:innerShadowDy="2dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/button_1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal|center"
        android:textSize="40dp"
        android:textColor="@color/button_color"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold"
        android:text="@string/button_1">

    </Button>
    <Button
        android:id="@+id/button_2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal|center"
        android:textSize="40dp"
        android:textColor="@color/button_color"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/button_2">

    </Button>
    <Button
        android:id="@+id/button_3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal|center"
        android:textSize="40dp"
        android:textColor="@color/button_color"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/button_3">

    </Button>
    <Button
        android:id="@+id/button_4"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal|center"
        android:textSize="40dp"
        android:textColor="@color/button_color"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/button_4">

    </Button>
    </LinearLayout>

</LinearLayout>